More updates to RC files

--- a/.config/latte/My Layout.layout.latte
+++ b/.config/latte/My Layout.layout.latte
@@ -27,18 +27,18 @@ immutability=1
 plugin=org.kde.latte.plasmoid
 
 [Containments][1][Applets][2][Configuration]
-PreloadWeight=18
+PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:citra.desktop,applications:desmume.desktop,applications:visualboyadvance-m.desktop,applications:snes9x-gtk.desktop,applications:m64p.desktop,applications:Mesen.desktop,applications:nestopia.desktop,applications:PCSX2.desktop,applications:PPSSPP-Qt.desktop,applications:pcsxr.desktop,applications:kega-fusion.desktop
+launchers59=applications:citra.desktop,applications:desmume.desktop,applications:visualboyadvance-m.desktop,applications:snes9x-gtk.desktop,applications:bsnes.desktop,applications:m64p.desktop,applications:Mesen.desktop,applications:nestopia.desktop,applications:PCSX2.desktop,applications:PPSSPP-Qt.desktop,applications:pcsxr.desktop,applications:epsxe.desktop,applications:kega-fusion.desktop
 
 [Containments][1][ConfigDialog]
 DialogHeight=939
 DialogWidth=539
 
 [Containments][1][Configuration]
-PreloadWeight=18
+PreloadWeight=0
 
 [Containments][1][General]
 advanced=false
