Big commit removing some obsolete configs and the rest are updates

--- a/.config/latte/My Layout.layout.latte
+++ b/.config/latte/My Layout.layout.latte
@@ -31,7 +31,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:citra.desktop,applications:desmume.desktop,applications:visualboyadvance-m.desktop,applications:snes9x-gtk.desktop,applications:bsnes.desktop,applications:m64p.desktop,applications:Mesen.desktop,applications:nestopia.desktop,applications:PCSX2.desktop,applications:PPSSPP-Qt.desktop,applications:pcsxr.desktop,applications:duckstation.desktop,applications:kega-fusion.desktop,applications:mame.desktop,applications:com.github.juliagoda.antimicroX.desktop
+launchers59=applications:citra.desktop,applications:desmume.desktop,applications:visualboyadvance-m.desktop,applications:snes9x-gtk.desktop,applications:bsnes.desktop,applications:m64p.desktop,applications:Mesen.desktop,applications:nestopia.desktop,applications:PCSX2.desktop,applications:PPSSPP-Qt.desktop,applications:pcsxr.desktop,applications:duckstation.desktop,applications:kega-fusion.desktop,applications:mame.desktop
 
 [Containments][1][ConfigDialog]
 DialogHeight=939
