Pushing updated configs

--- a/.config/latte/My Layout.layout.latte
+++ b/.config/latte/My Layout.layout.latte
@@ -11,6 +11,7 @@ immutability=1
 isPreferredForShortcuts=false
 lastScreen=-1
 location=4
+name=
 onPrimary=true
 plugin=org.kde.latte.containment
 raiseOnActivityChange=false
@@ -31,7 +32,10 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:citra.desktop,applications:visualboyadvance-m.desktop,applications:byuu.desktop,applications:snes9x-gtk.desktop,applications:bsnes.desktop,applications:m64p.desktop,applications:Mesen.desktop,applications:nestopia.desktop,applications:PCSX2.desktop,applications:PPSSPP-Qt.desktop,applications:pcsxr.desktop,applications:kega-fusion.desktop,applications:mame.desktop,applications:mednaffe.desktop
+launchers59=applications:citra.desktop,applications:visualboyadvance-m.desktop,applications:byuu.desktop,applications:snes9x-gtk.desktop,applications:bsnes.desktop,applications:m64p.desktop,applications:Mesen.desktop,applications:nestopia.desktop,applications:PCSX2.desktop,applications:PPSSPP-Qt.desktop,applications:duckstation-qt.desktop,applications:pcsxr.desktop,applications:kega-fusion.desktop,applications:mame.desktop,applications:mednaffe.desktop
+showOnlyCurrentActivity=false
+showOnlyCurrentScreen=true
+showWindowsOnlyFromLaunchers=true
 
 [Containments][1][ConfigDialog]
 DialogHeight=939
@@ -42,6 +46,7 @@ PreloadWeight=0
 
 [Containments][1][General]
 advanced=false
+alignmentUpgraded=true
 appletOrder=2
 blurEnabled=false
 durationTime=x1
@@ -49,12 +54,14 @@ iconSize=50
 panelSize=5
 shadowOpacity=60
 shadowSize=45
+shadowsUpgraded=true
 showGlow=false
 showOnlyCurrentActivity=false
 showOnlyCurrentScreen=true
 showWindowsOnlyFromLaunchers=true
 splitterPosition=1
 splitterPosition2=2
+tasksUpgraded=true
 thickMargin=15
 zoomLevel=16
 
@@ -71,11 +78,19 @@ glowEnabled=true
 minimizedTaskColoredDifferently=true
 
 [LayoutSettings]
+activities={free-activities}
 background=
+backgroundStyle=0
 color=blue
+customBackground=
+customTextColor=
+disableBordersForMaximizedWindows=false
+icon=
 lastUsedActivity=01b5122e-2c21-4f98-98f4-bb7241ccc068
 launchers=
+popUpMargin=-1
 preferredForShortcutsTouched=false
+schemeFile=
 showInMenu=true
 textColor=fcfcfc
 version=2
